--- a/styles.css
+++ b/styles.css
@@ -63,3 +63,9 @@ button {
 button:hover {
     background-color: #000000;
 }
+
+#output {
+    margin-top: 20px;
+    text-align: center;
+    word-spacing: 5px;
+}
